libs/extractor/src/snapshots/extractor__tests__styled_with_variable_like_emotion-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {styled} from '@devup-ui/core'\n        let primaryColor = 'blue';\n        let padding = '16px';\n        const StyledDiv = styled(\"div\")`\n          color: ${primaryColor};\n          padding: ${padding};\n        `\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "color",
                level: 0,
                identifier: "primaryColor",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "padding",
                level: 0,
                identifier: "padding",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\nlet primaryColor = \"blue\";\nlet padding = \"16px\";\nconst StyledDiv = ({ style, className, as: DevupAs = \"div\", forwardedAs, ...rest }) => <DevupAs {...(({ \"theme\": __devupOmit0, ...__devupDom }) => __devupDom)(rest)} as={forwardedAs} className={[\"a-a a-b\", className].filter(Boolean).join(\" \")} style={{\n\t...{\n\t\t\"--a\": padding,\n\t\t\"--b\": primaryColor\n\t},\n\t...style\n}} />;\n",
}
