libs/extractor/src/snapshots/extractor__tests__styled_with_variable_like_emotion-6.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {styled} from '@devup-ui/core'\n        const StyledDiv = styled(\"div\")({ bg: obj.bg, padding: func(), color: obj.color() })\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "obj.bg",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "color",
                level: 0,
                identifier: "obj.color()",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "padding",
                level: 0,
                identifier: "func()",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\nconst StyledDiv = ((__devupStyled84, __devupStyled101, __devupStyled116) => ({ style, className, ...rest }) => <div {...rest} className={[\"OHc7k4zal68jp7k3mq OHbbauumoumpx36srs OHbxb_cf0utjc2ds0x\", className].filter(Boolean).join(\" \")} style={{\n\t...{\n\t\t\"---SUHbhcqyt2k6fdumv2_-bu\": __devupStyled84,\n\t\t\"---SUHbhcqyt2k6fdumv2_-ca\": __devupStyled101,\n\t\t\"---SUHbhcqyt2k6fdumv2_-cp\": __devupStyled116\n\t},\n\t...style\n}} />)(obj.bg, func(), obj.color());\n",
}
