libs/extractor/src/snapshots/extractor__tests__styled_with_variable_like_emotion.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import {styled} from '@devup-ui/core'\n        let color = 'red';\n        const StyledDiv = styled.div`\n          color: ${color};\n          background: blue;\n        `\n        \",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "color",
                level: 0,
                identifier: "color",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\nlet color = \"red\";\nconst StyledDiv = ({ style, className, ...rest }) => <div {...rest} className={[\"FLtest_ptsx-OHcytyx33sgqci_8o0 FLtest_ptsx-OLbackground-vblue\", className].filter(Boolean).join(\" \")} style={{\n\t...{ \"---SUHal97ci4vh7md87ec-cv\": color },\n\t...style\n}} />;\n",
}
